Lab-16/openshift/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
