Lab-16/openshift/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: database
spec:
  selector:
    app: database
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
  type: ClusterIP
