Lab-16/openshift/proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  labels:
    app: proxy
spec:
  selector:
    app: proxy
  ports:
  - name: http
    port: 80
    targetPort: 8080  # Maps to non-privileged container port
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8443  # Maps to non-privileged container port
    protocol: TCP
  type: ClusterIP
